2022-07-28  Di Chen  <dichen@redhat.com>

	* libdw.map (ELFUTILS_0.188): Add dwfl_frame_reg.

2022-07-13  Mark Wielaard  <mark@klomp.org>

	* libdw.map (ELFUTILS_0.187): Renamed to...
	(ELFUTILS_0.188): ... this.

2022-05-09  Mark Wielaard  <mark@klomp.org>

	* dwarf_getlocation.c (store_implicit_value): Check block length.

2022-04-16  Mark Wielaard  <mark@klomp.org>

	* libdwP.h: Remove atomics.h include.

2022-04-13  Mark Wielaard  <mark@klomp.org>

	* dwarf.h: Add DWARF5 package file section identifiers,
	DW_SECT_*.

2021-10-20  John M Mellor-Crummey  <johnmc@rice.edu>

	* dwarf_linecontext.c: New file.
	* dwarf_linefunctionname.c: Likewise.
	* Makefile.am (libdw_a_SOURCES): Add dwarf_linecontext.c and
	dwarf_linefunctionname.c
	* dwarf.h: Add DW_LNE_NVIDIA_inlined_call and
	DW_LNE_NVIDIA_set_function_name.
	* dwarf_getsrclines.c (struct line_state): Add context and
	function_name fields.
	(add_new_line): Set context and function_name.
	(MAX_STACK_LINES): Reduce to MAX_STACK_ALLOC / 2.
	(read_srclines): Initialize context and function_name.  Try to
	read debug_str_offset if available.  Handle
	DW_LNE_NVIDIA_inlined_call and DW_LNE_NVIDIA_set_function_name.
	* libdw.h (dwarf_linecontext): New declaration.
	(dwarf_linefunctionname): Likewise.
	* libdw.map (ELFUTILS_0.186): New section.

2021-11-08  Mark Wielaard  <mark@klomp.org>

	* dwarf_begin_elf.c (scn_dwarf_type): New function.
	(check_section): Check result->type.
	(global_read): First check type.
	(scngrp_read): Likewise.
	* libdw/libdwP.h (enum dwarf_type): New enumeration.
	(struct Dwarf): New field type.

2021-02-14  Alexander Miller  <alex.miller@gmx.de>

	* dwarf_aggregate_size.c (dwarf_aggregate_size): Move NEW_VERSION
	before definition.  Replace INTDEF with NEW_INTDEF.
	* dwarf_srclang.c (dwarf_srclang): Likewise.
	* dwarf_arrayorder.c (dwarf_arrayorder): Move NEW_VERSION.
	* dwarf_bitoffset.c (dwarf_bitoffset): Likewise.
	* dwarf_bitsize.c (dwarf_bitsize): Likewise.