@@ -1,3 +1,8 @@
+2022-08-09  Ulrich Drepper  <drepper@redhat.com>
+
+	* dwarf_next_cfi.c (dwarf_next_cfi): Don't skip processing the
+	augmentation string.  Be more stringent what to accept.
+
 2022-07-28  Di Chen  <dichen@redhat.com>
 
 	* libdw.map (ELFUTILS_0.188): Add dwfl_frame_reg.
